--- a/Example/Koloda/Base.lproj/Main.storyboard
+++ b/Example/Koloda/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lFs-5J-kjv">
-                                <rect key="frame" x="76" y="504" width="34" height="34"/>
+                                <rect key="frame" x="59" y="484" width="51" height="51"/>
                                 <state key="normal" image="ic_skip">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -31,7 +31,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fbm-oE-jd7">
-                                <rect key="frame" x="211" y="505" width="38" height="34"/>
+                                <rect key="frame" x="211" y="484" width="57" height="51"/>
                                 <state key="normal" image="ic_like">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -95,7 +95,7 @@
                         <constraints>
                             <constraint firstItem="Jng-cF-Fd5" firstAttribute="top" secondItem="Ycz-B2-SpB" secondAttribute="bottom" id="1wA-oY-x3S"/>
                             <constraint firstAttribute="trailing" secondItem="Jng-cF-Fd5" secondAttribute="trailing" id="HDK-vX-CFt"/>
-                            <constraint firstItem="430-8H-S9o" firstAttribute="top" secondItem="lFs-5J-kjv" secondAttribute="top" id="PpG-qL-IJS"/>
+                            <constraint firstItem="430-8H-S9o" firstAttribute="top" secondItem="lFs-5J-kjv" secondAttribute="top" constant="20" id="PpG-qL-IJS"/>
                             <constraint firstItem="Jng-cF-Fd5" firstAttribute="top" secondItem="OPM-HU-f7U" secondAttribute="bottom" constant="64" id="SRd-NX-5XQ"/>
                             <constraint firstAttribute="bottom" secondItem="Jng-cF-Fd5" secondAttribute="bottom" id="X83-tu-cSg"/>
                             <constraint firstItem="gMg-MP-KSD" firstAttribute="top" secondItem="430-8H-S9o" secondAttribute="bottom" constant="30" id="Yqm-cu-3EX"/>
@@ -103,7 +103,7 @@
                             <constraint firstItem="Ycz-B2-SpB" firstAttribute="top" secondItem="PAT-Xa-b2g" secondAttribute="top" id="dvi-ws-Kcu"/>
                             <constraint firstItem="fbm-oE-jd7" firstAttribute="leading" secondItem="430-8H-S9o" secondAttribute="trailing" constant="50" id="fV3-z6-46y"/>
                             <constraint firstItem="Jng-cF-Fd5" firstAttribute="leading" secondItem="PAT-Xa-b2g" secondAttribute="leading" id="m1p-4u-j1f"/>
-                            <constraint firstItem="fbm-oE-jd7" firstAttribute="top" secondItem="430-8H-S9o" secondAttribute="top" constant="1" id="qiL-sJ-vee"/>
+                            <constraint firstItem="fbm-oE-jd7" firstAttribute="top" secondItem="430-8H-S9o" secondAttribute="top" constant="-20" id="qiL-sJ-vee"/>
                             <constraint firstItem="430-8H-S9o" firstAttribute="leading" secondItem="lFs-5J-kjv" secondAttribute="trailing" constant="50" id="toL-x9-SqY"/>
                             <constraint firstAttribute="centerX" secondItem="430-8H-S9o" secondAttribute="centerX" id="z8k-SO-Ygi"/>
                             <constraint firstAttribute="trailing" secondItem="Ycz-B2-SpB" secondAttribute="trailing" id="zRm-P8-erM"/>
@@ -126,8 +126,8 @@
     </scenes>
     <resources>
         <image name="ic_koloda" width="21" height="21"/>
-        <image name="ic_like" width="38" height="34"/>
-        <image name="ic_skip" width="34" height="34"/>
+        <image name="ic_like" width="57" height="51"/>
+        <image name="ic_skip" width="51" height="51"/>
         <image name="ic_undo" width="21" height="21"/>
     </resources>
 </document>
